--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- 在<head>中添加阿里图标库CSS链接 -->
+<link rel="stylesheet" href="//at.alicdn.com/t/c/font_4834800_60z1revcdv7.css"> <!-- 项目链接 -->
     <title>非遗文化传承网</title>
     <style>
       /* 基础样式 */
@@ -39,8 +41,8 @@
         position: fixed;
         top: 0;
         width: 100%;
-        background: rgba(40, 40, 40, 0.9);
-        backdrop-filter: blur(8px);
+        background: rgba(40, 40, 40, 0.2);
+        backdrop-filter: blur(0px);
         z-index: 1000;
         padding: 1rem 0;
         transition: background 0.3s;
@@ -74,7 +76,7 @@
       }
 
       .nav-menu a:hover {
-        color: #cdaa7d;
+        color: #cd9a7d;
       }
 
       /* 日期显示 */
@@ -115,7 +117,6 @@
       /* 新闻动态 */
       .news-section {
         background: url("images/4.jpg") no-repeat center center fixed;
-        /*兼容浏览器版本*/
         -webkit-background-size: cover;
         -o-background-size: cover;
         background-size: cover;
@@ -139,8 +140,8 @@
         top: 500px;
       }
 
-     /* 地图区域 */
-     .map-section {
+      /* 地图区域新样式 */
+      .map-section {
         background: url("images/map2.jpg") no-repeat center center fixed;
         padding: 80px 0;
       }
@@ -171,6 +172,7 @@
         position: relative;
         top: -30px;
         left: 100px;
+
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
       }
 
@@ -227,11 +229,14 @@
     <!-- 导航栏 -->
     <nav class="navbar">
       <div class="container">
-        <div class="logo">非遗传承</div>
+        <div class="logo">
+    <i style="font-size:60px;" class="iconfont icon-feiyichuancheng"></i>  <!-- 替换icon-logo为实际图标类名 -->
+    <span></span>
+</div>
         <ul class="nav-menu">
           <li><a href="#home" class="active">首页</a></li>
-          <li><a href="#heritage">非遗传承</a></li>
-          <li><a href="#news">新闻动态</a></li>
+          <li><a href="https://www.ihchina.cn/ziyuan">非遗传承</a></li>
+          <li><a href="https://www.ihchina.cn/news">新闻动态</a></li>
           <li><a href="#products">特色产品</a></li>
           <li><a href="#contact">联系我们</a></li>
         </ul>
@@ -252,17 +257,19 @@
             class="slide"
             style="background-image: url('images/2.jpg')"
           ></div>
-
           <div
             class="slide"
             style="background-image: url('images/3.jpg')"
+          ></div>
+          <div
+            class="slide"
+            style="background-image: url('images/6.jpg')"
           ></div>
         </div>
       </section>
 
       <!-- 新闻区块 -->
-
-      <section class="section news-section" id="news">
+       <section class="section news-section" id="news">
         <div class="container">
           <h2 class="section-title">最新动态</h2>
           <div class="news-grid">
@@ -297,10 +304,11 @@
         </div>
       </section>
 
-      <!-- 地图区块 -->
-        <section class="section map-section" id="map">
+
+      <!-- 修改后的地图区块 -->
+      <section class="section map-section" id="map">
         <div class="container">
-          <h2 class="section-title"></h2>
+          <h2 class="section-title">非遗分布地图</h2>
           <div class="map-wrapper">
             <div class="map-container">
               <img src="images/map.png" alt="非遗分布地图" class="map-image" />
@@ -317,65 +325,70 @@
       </section>
     </div>
 
-    
-    
-  
+    <script>
       // 日期显示
       function updateDate() {
-        const dateElement = document.getElementById("current-date");
-        const now = new Date();
-        const options = { year: "numeric", month: "long", day: "numeric" };
-        dateElement.textContent = now.toLocaleDateString("zh-CN", options);
+        const dateElement = document。getElementById("current-date");
+        const 当前 = new Date();
+        const options = { year: "numeric"， month: "long"， day: "numeric" };
+        dateElement。textContent = 当前。toLocaleDateString("zh-CN"， options);
       }
       updateDate();
 
       // 全屏滚动控制
       let isScrolling = false;
-      window.addEventListener(
-        "wheel",
+      window。addEventListener(
+        "wheel"，
         (e) => {
           if (isScrolling) return;
           isScrolling = true;
 
-          const sections = document.querySelectorAll(".section");
-          const currentIndex = Array.from(sections).findIndex((s) =>
-            s.classList.contains("active")
+          const sections = document。querySelectorAll(".section");
+          const currentIndex = Array。from(sections)。findIndex((s) =>
+            s。classList。contains("active")
           );
           let targetIndex = currentIndex;
 
-          if (e.deltaY > 0 && currentIndex < sections.length - 1) {
+          if (e。deltaY > 0 && currentIndex < sections。length - 1) {
             targetIndex = currentIndex + 1;
-          } else if (e.deltaY < 0 && currentIndex > 0) {
+          } else if (e。deltaY < 0 && currentIndex > 0) {
             targetIndex = currentIndex - 1;
           }
 
-          sections[currentIndex].classList.remove("active");
-          sections[targetIndex].classList.add("active");
-          sections[targetIndex].scrollIntoView({ behavior: "smooth" });
+          sections[currentIndex]。classList。remove("active");
+          sections[targetIndex]。classList。add("active");
+          sections[targetIndex]。scrollIntoView({ behavior: "smooth" });
 
           setTimeout(() => {
             isScrolling = false;
-          }, 1000);
-        },
+          }， 1000);
+        }，
         { passive: false }
       );
 
       // 轮播图功能
       let currentSlide = 0;
-      const slides = document.querySelectorAll(".slide");
+      const slides = document。querySelectorAll(".slide");
 
       setInterval(() => {
-        slides[currentSlide].classList.remove("active");
-        currentSlide = (currentSlide + 1) % slides.length;
-        slides[currentSlide].classList.add("active");
-      }, 5000);
+        slides[currentSlide]。classList。remove("active");
+        currentSlide = (currentSlide + 1) % slides。length;
+        slides[currentSlide]。classList。add("active");
+      }， 5000);
 
-      // 导航栏交互
-      document.querySelectorAll(".nav-menu a").forEach((link) => {
-        link.addEventListener("click", (e) => {
-          e.preventDefault();
-          const target = document.querySelector(link.getAttribute("href"));
-          target.scrollIntoView({ behavior: "smooth" });
+      // 导航栏交互（修改后的点击事件处理）
+      document。querySelectorAll(".nav-menu a")。forEach((link) => {
+        link。addEventListener("click"， (e) => {
+          const href = link。getAttribute("href");
+          // 仅处理锚点链接
+          if (href。startsWith("#")) {
+            e。preventDefault();
+            const target = document。querySelector(href);
+            if (target) {
+              target。scrollIntoView({ behavior: "smooth" });
+            }
+          }
+          // 外部链接保持默认行为
         });
       });
     </script>
